# yaffle-rss-reader

./: .gitignore  README.md  config_management.py  icon-transparency.md  icon_processing.py  pyproject.toml  subscriptions.json  wx-nonsense.py  wx-nonsense.spec  wx-tree.py  yaffle.py  yaffle.spec
