[tool.poetry]
name = "yaffle-rss-reader"
version = "0.1"
description = "A desktop RSS reader companion app for Yarr"
authors = ["Phil Wilson <github@philwilson.org>"]
license = "MIT"
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.8"
requests = "^2.31.0"
wxPython = "^4.2.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
